app/javascript/styles/mastodon/components.scss
/* ... */
.filter-form {
  border-bottom: 1px solid var(--background-border-color);

  &__column {
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 15px;
  }

  .radio-button {
    display: flex;
  }
}

.column-settings__row .radio-button {
  display: flex;
}

.radio-button,
.check-box {
  font-size: 14px;
  position: relative;
  display: inline-flex;
  align-items: center;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  gap: 10px;
  color: $secondary-text-color;

  input[type='radio'],
  input[type='checkbox'] {
    display: none;
  }

  &__input {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    border: 2px solid $secondary-text-color;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    flex: 0 0 auto;
    border-radius: 50%;

    &.checked,
    &.indeterminate {
      border-color: $ui-highlight-color;
    }

    .icon {
      width: 18px;
      height: 18px;
    }
  }
}

.radio-button__input.checked::before {
  position: absolute;
  left: 2px;
  top: 2px;
  content: '';
  display: block;
  border-radius: 50%;
  width: 12px;
  height: 12px;
  background: $ui-highlight-color;
}

.check-box {
  &__input {
    width: 18px;
    height: 18px;
    border-radius: 2px;

    &.checked,
    &.indeterminate {
      background: $ui-highlight-color;
      color: $white;
    }
  }
}

noscript {
  text-align: center;

  img {
    width: 200px;
    opacity: 0.5;
    animation: flicker 4s infinite;
  }

  div {
    font-size: 14px;
    margin: 30px auto;
    color: $secondary-text-color;
    max-width: 400px;

    a {
      color: $highlight-text-color;
      text-decoration: underline;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

@keyframes flicker {
  0% {
    opacity: 1;
  }

  30% {
    opacity: 0.75;
  }

  100% {
    opacity: 1;
  }
}

.moved-account-banner,
.follow-request-banner,
.account-memorial-banner {
  padding: 20px;
  background: var(--surface-background-color);
  display: flex;
  align-items: center;
  flex-direction: column;

  &__message {
    color: $darker-text-color;
    padding: 8px 0;
    padding-top: 0;
    padding-bottom: 4px;
    font-size: 14px;
    font-weight: 500;
    text-align: center;
    margin-bottom: 16px;
  }

  &__action {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 15px;
    width: 100%;
  }

  .detailed-status__display-name {
    margin-bottom: 0;
  }
}

.follow-request-banner .button {
  width: 100%;
}

.account-memorial-banner__message {
  margin-bottom: 0;
}

.column-inline-form {
  padding: 15px;
  display: flex;
  justify-content: flex-start;
  gap: 15px;
  align-items: center;
  border: 1px solid var(--background-border-color);
  border-top: 0;

  label {
    flex: 1 1 auto;

    input {
      width: 100%;
    }
  }

  @media screen and (max-width: $no-gap-breakpoint) {
    border-left: 0;
    border-right: 0;
  }
}

.drawer__backdrop {
  cursor: pointer;
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: 100%;
  height: 100%;
  background: rgba($base-overlay-background, 0.5);
}

.list-editor {
  background: $ui-base-color;
  flex-direction: column;
  border-radius: 8px;
  box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
  width: 380px;
  overflow: hidden;

  @media screen and (width <= 420px) {
    width: 90%;
  }

  h4 {
    padding: 15px 0;
    background: lighten($ui-base-color, 13%);
    font-weight: 500;
    font-size: 16px;
    text-align: center;
    border-radius: 8px 8px 0 0;
  }

  .drawer__pager {
    height: 50vh;
    border-radius: 4px;
  }

  .drawer__inner {
    border-radius: 0 0 8px 8px;

    &.backdrop {
      width: calc(100% - 60px);
      box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
      border-radius: 0 0 0 8px;
    }
  }

  &__accounts {
    overflow-y: auto;
  }

  .account__display-name {
    &:hover strong {
      text-decoration: none;
    }
  }

  .account__avatar {
    cursor: default;
  }

  .search {
    margin-bottom: 0;
  }
}

.list-adder {
  background: $ui-base-color;
  flex-direction: column;
  border-radius: 8px;
  box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
  width: 380px;
  overflow: hidden;

  @media screen and (width <= 420px) {
    width: 90%;
  }

  &__account {
    background: lighten($ui-base-color, 13%);
  }

  &__lists {
    background: lighten($ui-base-color, 13%);
    height: 50vh;
    border-radius: 0 0 8px 8px;
    overflow-y: auto;
  }

  .list {
    padding: 10px;
    border-bottom: 1px solid var(--background-border-color);
  }

  .list__wrapper {
    display: flex;
  }

  .list__display-name {
    flex: 1 1 auto;
    overflow: hidden;
    text-decoration: none;
    font-size: 16px;
    padding: 10px;
  }
}
/* ... */

